# family-network-adk-

./: .cursorrules  .env.example  .gitignore  AGENT_HANDOFF_FLOW.md  AGENT_TRAJECTORY_IMPLEMENTATION_PLAN.md  CLAUDE_CONTEXT.md  README.md  TESTING_GUIDE.md  check_database.py  main.py  pyproject.toml  run_api.py  run_ui.py  run_ui_barebones.py  run_ui_crm_only.py  run_ui_no_reload.py  run_ui_simple.py  seed_data.py  simple_test.py  test_extraction_debug.py  test_pipeline.py  test_ui_minimal.py  test_ui_simple.py  view_crm_cli.py
.claude/: settings.local.json
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  entity_extractor.py  graph_builder.py
src/api/: main.py
src/audio/: __init__.py  converter.py  processor.py  validator.py  websocket_server.py
src/graph/: __init__.py  analytics.py  app_settings.py  crm_store.py  crm_store_v2.py  enhanced_crm.py  family_graph.py  family_registry.py  models.py  models_v2.py  person_store.py  temple_store.py  text_history.py  vector_store.py
src/mcp/: __init__.py  client.py  family_server.py  fuzzy_matcher.py  input_api_server.py  input_client.py  input_server.py  run_input.py  run_input_api.py  (+2 more)
tests/: __init__.py  test_crm_mcp_server.py  test_crm_v2.py  test_stage1_foundation.py  test_stage2_audio.py  test_stage2b_websocket.py  test_stage2c_ui.py  test_stage3a_converter.py  test_stage3b_whisper.py  test_stage3c_mcp.py  test_stage4_graph.py  test_stage5_crm_mcp.py  test_stage6_entity_agent.py  test_stage7_graph_builder.py  test_stage8_analytics.py  test_stage9_tree_ui.py  test_storage_agent.py
(+52 files in other folders)
