[project]
name = "family-network-adk"
version = "0.1.0"
description = "Agentic AI Family Network with Google ADK and FastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "graphlite>=1.0.5",
    "noisereduce>=3.0.3",
    "numpy>=2.3.5",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "nicegui>=3.3.1",
    "pydub>=0.25.1",
    "openai>=2.8.1",
    "fastmcp>=2.13.1",
    "aiosqlite>=0.21.0",
    "google-adk>=1.18.0",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
    "litellm>=1.80.7",
    "openai-whisper>=20250625",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
